@@ -4,6 +4,7 @@ Makefile.PL
 MANIFEST
 cetus.ttf
 demo/GDWrap.pl
+demo/GDWrap.ref.png
 t/lib.pl
 t/text.t
 t/align.t
