@@ -1,9 +1,9 @@
-# $Id: Text.pm,v 1.24 2002/01/19 05:14:06 mgjv Exp $
+# $Id: Text.pm,v 1.25 2002/01/19 07:02:05 mgjv Exp $
 
 package GD::Text;
 
-$GD::Text::prog_version = '$Revision: 1.24 $' =~ /\s([\d.]+)/;
-$GD::Text::VERSION = '0.80';
+$GD::Text::prog_version = '$Revision: 1.25 $' =~ /\s([\d.]+)/;
+$GD::Text::VERSION = '0.82';
 
 =head1 NAME
 
@@ -24,7 +24,7 @@ GD::Text - Text utilities for use with GD
 
   if ($gd_text->is_ttf)
   {
-	  ...
+      ...
   }
 
 Or alternatively
@@ -62,12 +62,12 @@ use Carp;
 use vars qw($FONT_PATH @FONT_PATH $OS);
 BEGIN
 {
-	$FONT_PATH = $ENV{FONT_PATH} || $ENV{TTF_FONT_PATH} || '';
-	unless ($OS = $^O)
-	{
-		require Config;
-		$OS = $Config::Config{'os_name'};
-	}
+    $FONT_PATH = $ENV{FONT_PATH} || $ENV{TTF_FONT_PATH} || '';
+    unless ($OS = $^O)
+    {
+        require Config;
+        $OS = $Config::Config{'os_name'};
+    }
 }
 
 my $ERROR;
@@ -82,13 +82,13 @@ sub new
 {
     my $proto = shift;
     my $class = ref($proto) || $proto;
-	my $self = { 
-			type   => 'builtin',
-			font   => gdSmallFont,
-			ptsize => 10,
-		};
+    my $self = { 
+            type   => 'builtin',
+            font   => gdSmallFont,
+            ptsize => 10,
+        };
     bless $self => $class;
-	$self->set(@_) or return;
+    $self->set(@_) or return;
     return $self
 }
 
@@ -136,140 +136,150 @@ Returns true on success, false on error.
 
 sub set_font
 {
-	my $self = shift;
-	my $fonts = shift;
-	my $size = shift;
+    my $self = shift;
+    my $fonts = shift;
+    my $size = shift;
 
-	# Make sure we have a reference to an array
-	$fonts = [$fonts] unless ref($fonts) eq 'ARRAY';
+    # Make sure we have a reference to an array
+    $fonts = [$fonts] unless ref($fonts) eq 'ARRAY';
 
-	foreach my $font (@{$fonts})
-	{
-		my $rc = ref($font) && $font->isa('GD::Font') ?
-			$self->_set_builtin_font($font) :
-			$self->_set_TTF_font($font, $size) ;
-		return $rc if $rc;
-	}
+    foreach my $font (@{$fonts})
+    {
+        my $rc = ref($font) && $font->isa('GD::Font') ?
+            $self->_set_builtin_font($font) :
+            $self->_set_TTF_font($font, $size || $self->{ptsize}) ;
+        return $rc if $rc;
+    }
 
-	return;
+    return;
 }
 
 sub _set_builtin_font
 {
-	my $self = shift;
-	my $font = shift;
+    my $self = shift;
+    my $font = shift;
 
-	$self->{type}   = 'builtin';
-	$self->{font}   = $font;
-	$self->{ptsize} = 0;
-	$self->_recalc();
-	return 1;
+    $self->{type}   = 'builtin';
+    $self->{font}   = $font;
+    $self->{ptsize} = 0;
+    $self->_recalc();
+    return 1;
 }
 
 sub _find_TTF
 {
-	my $font = shift || return;
-	local $FONT_PATH = $FONT_PATH;
+    my $font = shift || return;
+    local $FONT_PATH = $FONT_PATH;
 
-	# XXX MOVE A LOT OF THIS INTO THE font_path SUB, filling the
-	# @FONT_PATH array
-	my ($psep, $dsep);
+    # XXX MOVE A LOT OF THIS INTO THE font_path SUB, filling the
+    # @FONT_PATH array
+    my ($psep, $dsep);
 
-	if ($OS =~ /^MS(DOS|Win)/i)
-	{
-		# Fix backslashes
-		$font =~ s#\\#/#g;
-		# Check for absolute path
-		$font =~ m#^([A-Za-z]:|/)# and return $font;
-		$FONT_PATH =~ s#\\#/#g; # XXX move to set_font_path?
-		$psep = '/';
-		$dsep = ';';
-	}
+    if ($OS =~ /^MS(DOS|Win)/i)
+    {
+        # Fix backslashes
+        $font =~ s#\\#/#g;
+        # Check for absolute path
+        $font =~ m#^([A-Za-z]:|/)# and return $font;
+        $FONT_PATH =~ s#\\#/#g; # XXX move to set_font_path?
+        $psep = '/';
+        $dsep = ';';
+    }
 =pod
-	elsif ($OS =~ /^MacOS/i)   
-	{ 
-		# Check for absolute path
-		$font =~ /:/ and $font !~ /^:/ and return $font;
-		$psep = ':';
-		$dsep = ',';
-	}
-	elsif ($OS =~ /^AmigaOS/i) 
-	{ 
-		# What's an absolute path here? 
-		$psep = '/';
-		$dsep = ':'; # XXX ?
-	}
-	elsif ($OS =~ /^VMS/i)
-	{ 
-		# What's an absolute path here? 
-		$psep = '/';
-		$dsep = ':';
-	}
+    elsif ($OS =~ /^MacOS/i)   
+    { 
+        # Check for absolute path
+        $font =~ /:/ and $font !~ /^:/ and return $font;
+        $psep = ':';
+        $dsep = ',';
+    }
+    elsif ($OS =~ /^AmigaOS/i) 
+    { 
+        # What's an absolute path here? 
+        $psep = '/';
+        $dsep = ':'; # XXX ?
+    }
+    elsif ($OS =~ /^VMS/i)
+    { 
+        # What's an absolute path here? 
+        $psep = '/';
+        $dsep = ':';
+    }
 =cut
-	else
-	{
-		# Default to Unix
-		# Check for absolute path
-		substr($font, 0, 1) eq '/' and return $font;
-		$psep = '/';
-		$dsep = ':';
-	}
+    else
+    {
+        # Default to Unix
+        # Check for absolute path
+        substr($font, 0, 1) eq '/' and return $font;
+        $psep = '/';
+        $dsep = ':';
+    }
 
-	# If we don't have a font path set, we look in the current directory
-	# only.
-	if ($FONT_PATH)
-	{
-		# We have a font path, and a relative path to the font file.
-		# Let's see if the current directory is in the font path. If
-		# not, put it at the front.
-		$FONT_PATH = ".$dsep$FONT_PATH"
-			unless $FONT_PATH eq '.'        || $FONT_PATH =~ /^\.$dsep/ ||
-				   $FONT_PATH =~ /$dsep\.$/ || $FONT_PATH =~ /$dsep\.$dsep/;
-	}
-	else
-	{
-		# XXX what about MacOS? It doesn't work like this on MacOS.
-		$FONT_PATH = '.';
-	}
+    # If we don't have a font path set, we look in the current directory
+    # only.
+    if ($FONT_PATH)
+    {
+        # We have a font path, and a relative path to the font file.
+        # Let's see if the current directory is in the font path. If
+        # not, put it at the front.
+        $FONT_PATH = ".$dsep$FONT_PATH"
+            unless $FONT_PATH eq '.'        || $FONT_PATH =~ /^\.$dsep/ ||
+                   $FONT_PATH =~ /$dsep\.$/ || $FONT_PATH =~ /$dsep\.$dsep/;
+    }
+    else
+    {
+        # XXX what about MacOS? It doesn't work like this on MacOS.
+        $FONT_PATH = '.';
+    }
 
-	# Let's search for it
-	for my $path (split /$dsep/, $FONT_PATH)
-	{
-		# XXX Can I use File::Basename for this?
-		my $file = "$path$psep$font";
-		#print "Trying $file\n";
-		-f $file and return $file;
-		# See if we can find one with a .ttf at the end
-		$file = "$path$psep$font.ttf";
-		-f $file and return $file;
-	}
+    # Let's search for it
+    for my $path (split /$dsep/, $FONT_PATH)
+    {
+        # XXX Can I use File::Basename for this?
+        my $file = "$path$psep$font";
+        #print "Trying $file\n";
+        -f $file and return $file;
+        # See if we can find one with a .ttf at the end
+        $file = "$path$psep$font.ttf";
+        -f $file and return $file;
+    }
 
-	return;
+    return;
 }
 
 sub _set_TTF_font
 {
-	my $self = shift;
-	my $font = shift;
-	my $size = shift;
+    my $self = shift;
+    my $font = shift;
+    my $size = shift;
 
-	$ERROR = "TrueType fonts require a point size", return 
-		unless (defined $size && $size > 0);
-	
-	return unless $self->can_do_ttf;
+    $ERROR = "TrueType fonts require a point size", return 
+        unless (defined $size && $size > 0);
+    
+    return unless $self->can_do_ttf;
 
-	my $font_file = _find_TTF($font) or 
-		$ERROR = "Cannot find TTF font: $font", return;
+    my $font_file = _find_TTF($font) or 
+        $ERROR = "Cannot find TTF font: $font", return;
 
-	# Check that the font exists and is a real TTF font
-	my @bb = GD::Image->stringTTF(0, $font_file, $size, 0, 0, 0, "foo");
-	$ERROR = "$@", return unless @bb;
+    # XXX Fix for Freetype 2.0x bug, where relative paths to a font file
+    # no longer work.
+    if (substr($font_file, 0, 1) eq '.')
+    {
+        # This is a relative path. Replace ./path/file with
+        # $cwd/path/file
+        require Cwd;
+        substr($font_file, 0, 1) = Cwd::cwd;
+    }
 
-	$self->{type}   = 'ttf';
-	$self->{font}   = $font_file;
-	$self->{ptsize} = $size;
-	$self->_recalc();
-	return 1;
+    # Check that the font exists and is a real TTF font
+    my @bb = GD::Image->stringTTF(0, $font_file, $size, 0, 0, 0, "foo");
+    $ERROR = "$@", return unless @bb;
+
+    $self->{type}   = 'ttf';
+    $self->{font}   = $font_file;
+    $self->{ptsize} = $size;
+    $self->_recalc();
+    return 1;
 }
 
 =head2 $gd_text->set_text('some text')
@@ -281,13 +291,13 @@ Returns true on success and false on error.
 
 sub set_text
 {
-	my $self = shift;
-	my $text = shift;
+    my $self = shift;
+    my $text = shift;
 
-	$ERROR = "No text set", return unless defined $text;
+    $ERROR = "No text set", return unless defined $text;
 
-	$self->{text} = $text;
-	$self->_recalc_width();
+    $self->{text} = $text;
+    $self->_recalc_width();
 }
 
 =head2 $gd_text->set( attrib => value, ... )
@@ -319,39 +329,39 @@ my $recalc = 1;
 
 sub set
 {
-	my $self = shift;
-	$ERROR = "Incorrect attribute list", return if @_%2;
-	my %args = @_;
+    my $self = shift;
+    $ERROR = "Incorrect attribute list", return if @_%2;
+    my %args = @_;
 
-	$ERROR = '';
+    $ERROR = '';
 
-	$recalc = 0;
-	foreach (keys %args)
-	{
-		/^text$/i   and do {
-			$self->set_text($args{$_});
-			next;
-		};
-		/^font$/i   and do {
-			$self->set_font($args{$_}, $self->{ptsize}) or return;
-			next;
-		};
-		/^ptsize$/i and do {
-			$self->{ptsize} = $args{$_};
-			next;
-		};
-		$ERROR .= " '$_'";
-	}
-	$recalc = 1;
-	$self->_recalc();
+    $recalc = 0;
+    foreach (keys %args)
+    {
+        /^text$/i   and do {
+            $self->set_text($args{$_});
+            next;
+        };
+        /^font$/i   and do {
+            $self->set_font($args{$_}, $self->{ptsize}) or return;
+            next;
+        };
+        /^ptsize$/i and do {
+            $self->{ptsize} = $args{$_};
+            next;
+        };
+        $ERROR .= " '$_'";
+    }
+    $recalc = 1;
+    $self->_recalc();
 
-	if ($ERROR ne '')
-	{
-		$ERROR = "Illegal attribute(s):$ERROR";
-		return;
-	}
+    if ($ERROR ne '')
+    {
+        $ERROR = "Illegal attribute(s):$ERROR";
+        return;
+    }
 
-	return 1;
+    return 1;
 }
 
 =head2 $gd_text->get( attrib, ... )
@@ -389,9 +399,9 @@ that is set.
 
 sub get
 {
-	my $self = shift;
-	my @wanted = map $self->{$_}, @_;
-	wantarray ? @wanted : $wanted[0];
+    my $self = shift;
+    my @wanted = map $self->{$_}, @_;
+    wantarray ? @wanted : $wanted[0];
 }
 
 =head2 $gd_text->width('string')
@@ -406,15 +416,15 @@ The use of this method is vaguely deprecated.
 
 sub width
 {
-	my $self   = shift;
-	my $string = shift;
-	my $save   = $self->get('text');
+    my $self   = shift;
+    my $string = shift;
+    my $save   = $self->get('text');
 
-	$self->set_text($string) or return;
-	my $w = $self->get('width');
-	$self->set_text($save);
+    $self->set_text($string) or return;
+    my $w = $self->get('width');
+    $self->set_text($save);
 
-	return $w;
+    return $w;
 }
 
 # Here we do the real work. See the documentation for the get method to
@@ -422,88 +432,88 @@ sub width
 
 sub _recalc_width
 {
-	my $self = shift;
+    my $self = shift;
 
-	return unless $recalc;
-	return unless (defined $self->{text} && $self->{font});
+    return unless $recalc;
+    return unless (defined $self->{text} && $self->{font});
 
-	if ($self->is_builtin)
-	{
-		$self->{'width'} = $self->{font}->width() * length($self->{text});
-	}
-	elsif ($self->is_ttf)
-	{
-		my @bb1 = GD::Image->stringTTF(0, 
-			$self->{font}, $self->{ptsize}, 0, 0, 0, $self->{text});
-		$self->{'width'} = $bb1[2] - $bb1[0];
-	}
-	else
-	{
-		confess "Impossible error in GD::Text::_recalc.";
-	}
+    if ($self->is_builtin)
+    {
+        $self->{'width'} = $self->{font}->width() * length($self->{text});
+    }
+    elsif ($self->is_ttf)
+    {
+        my @bb1 = GD::Image->stringTTF(0, 
+            $self->{font}, $self->{ptsize}, 0, 0, 0, $self->{text});
+        $self->{'width'} = $bb1[2] - $bb1[0];
+    }
+    else
+    {
+        confess "Impossible error in GD::Text::_recalc.";
+    }
 }
 
 my ($test_string, $space_string, $n_spaces); 
 
 BEGIN
 {
-	# Build a string of all characters that are printable, and that are
-	# not whitespace.
-	eval {
-		require POSIX; 
-		import POSIX;
-		$test_string = join '', grep isgraph($_), map chr($_), (0x00..0xFF);
-	};
+    # Build a string of all characters that are printable, and that are
+    # not whitespace.
+    eval {
+        require POSIX; 
+        import POSIX;
+        $test_string = join '', grep isgraph($_), map chr($_), (0x00..0xFF);
+    };
 
-	if ($@)
-	{
-		# Most likely POSIX is not available.
-		# Let's try to emulate isgraph(). This may be wrong at times.
-		$test_string = join '', map chr($_), (0x21..0x7e, 0xa1..0xff);
-	}
+    if ($@)
+    {
+        # Most likely POSIX is not available.
+        # Let's try to emulate isgraph(). This may be wrong at times.
+        $test_string = join '', map chr($_), (0x21..0x7e, 0xa1..0xff);
+    }
 
-	$space_string = $test_string;
+    $space_string = $test_string;
 
-	# Put a space every 5 characters, and count how many there are
-	$n_spaces = $space_string =~ s/(.{5})(.{5})/$1 $2/g;
+    # Put a space every 5 characters, and count how many there are
+    $n_spaces = $space_string =~ s/(.{5})(.{5})/$1 $2/g;
 }
 
 sub _recalc
 {
-	my $self = shift;
+    my $self = shift;
 
-	return unless $recalc;
-	return unless $self->{font};
+    return unless $recalc;
+    return unless $self->{font};
 
-	if ($self->is_builtin)
-	{
-		$self->{height} =
-		$self->{char_up} = $self->{font}->height();
-		$self->{char_down} = 0;
-		$self->{space} = $self->{font}->width();
-	}
-	elsif ($self->is_ttf)
-	{
-		my @bb1 = GD::Image->stringTTF(0, 
-			$self->{font}, $self->{ptsize}, 0, 0, 0, $test_string)
-				or return;
-		my @bb2 = GD::Image->stringTTF(0, 
-			$self->{font}, $self->{ptsize}, 0, 0, 0, $space_string);
-		$self->{char_up} = -$bb1[7];
-		$self->{char_down} = $bb1[1];
-		$self->{height} = $self->{char_up} + $self->{char_down};
-		# XXX Should we really round this?
-		$self->{space} = sprintf "%.0f", 
-			(($bb2[2]-$bb2[0]) - ($bb1[2]-$bb1[0]))/$n_spaces;
-	}
-	else
-	{
-		confess "Impossible error in GD::Text::_recalc.";
-	}
+    if ($self->is_builtin)
+    {
+        $self->{height} =
+        $self->{char_up} = $self->{font}->height();
+        $self->{char_down} = 0;
+        $self->{space} = $self->{font}->width();
+    }
+    elsif ($self->is_ttf)
+    {
+        my @bb1 = GD::Image->stringTTF(0, 
+            $self->{font}, $self->{ptsize}, 0, 0, 0, $test_string)
+                or return;
+        my @bb2 = GD::Image->stringTTF(0, 
+            $self->{font}, $self->{ptsize}, 0, 0, 0, $space_string);
+        $self->{char_up} = -$bb1[7];
+        $self->{char_down} = $bb1[1];
+        $self->{height} = $self->{char_up} + $self->{char_down};
+        # XXX Should we really round this?
+        $self->{space} = sprintf "%.0f", 
+            (($bb2[2]-$bb2[0]) - ($bb1[2]-$bb1[0]))/$n_spaces;
+    }
+    else
+    {
+        confess "Impossible error in GD::Text::_recalc.";
+    }
 
-	$self->_recalc_width() if $self->{text};
+    $self->_recalc_width() if $self->{text};
 
-	return 1;
+    return 1;
 }
 
 =head2 $gd_text->is_builtin
@@ -514,8 +524,8 @@ Returns true if the current object is based on a builtin GD font.
 
 sub is_builtin
 {
-	my $self = shift; 
-	return $self->{type} eq 'builtin';
+    my $self = shift; 
+    return $self->{type} eq 'builtin';
 }
 
 =head2 $gd_text->is_ttf
@@ -526,8 +536,8 @@ Returns true if the current object is based on a TrueType font.
 
 sub is_ttf
 {
-	my $self = shift; 
-	return $self->{type} eq 'ttf';
+    my $self = shift; 
+    return $self->{type} eq 'ttf';
 }
 
 =head2 $gd_text->can_do_ttf() or GD::Text->can_do_ttf()
@@ -541,21 +551,21 @@ has TTF support compiled into it.
 
 sub can_do_ttf
 {
-	my $proto = shift;
+    my $proto = shift;
 
-	# Just see whether there is a stringTTF method at all
-	GD::Image->can('stringTTF') or return;
+    # Just see whether there is a stringTTF method at all
+    GD::Image->can('stringTTF') or return;
 
-	# Let's check whether TTF support has been compiled in.  We don't
-	# need to worry about providing a real font. The following will
-	# always fail, but we'll check the message to see why it failed
-	GD::Image->stringTTF(0, 'foo', 10, 0, 0, 0, 'foo');
+    # Let's check whether TTF support has been compiled in.  We don't
+    # need to worry about providing a real font. The following will
+    # always fail, but we'll check the message to see why it failed
+    GD::Image->stringTTF(0, 'foo', 10, 0, 0, 0, 'foo');
 
-	# Error message: libgd was not built with TrueType font support
-	$@ =~ /TrueType font support/i and return;
+    # Error message: libgd was not built with TrueType font support
+    $@ =~ /TrueType font support/i and return;
 
-	# Well.. It all seems to be fine
-	return 1;
+    # Well.. It all seems to be fine
+    return 1;
 }
 
 =head2 $gd_text->font_path(path_spec), GD::Text->font_path(path_spec)
@@ -598,18 +608,18 @@ code, and send me patches for their OS, I'd be most grateful)
 
 sub font_path
 {
-	my $proto = shift;
-	if (@_)
-	{
-		$FONT_PATH = shift;
-		if ($FONT_PATH)
-		{
-			# clean up a bit
-			$FONT_PATH =~ s/^:+//;
-			$FONT_PATH =~ s/:+$//;
-		}
-	}
-	$FONT_PATH;
+    my $proto = shift;
+    if (@_)
+    {
+        $FONT_PATH = shift;
+        if ($FONT_PATH)
+        {
+            # clean up a bit
+            $FONT_PATH =~ s/^:+//;
+            $FONT_PATH =~ s/:+$//;
+        }
+    }
+    $FONT_PATH;
 }
 
 =head1 BUGS
